// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionMenu should render examples: ActionMenu 1`] = `
"<div>
  <div>
    <div>
      <button>Show action menu</button>
    </div>
  </div>
</div>"
`;

exports[`Avatar should render examples: Avatar 1`] = `
"<div>
  <div>
    <div class=\\"c-avatar c-avatar--medium\\">
      <!-- react-text: 2 -->
      <!-- /react-text -->
      <!-- react-text: 3 -->
      <!-- /react-text -->
      <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\">
        <use xlink:href=\\"test-file-stub\\"></use>
      </svg>
    </div>
  </div>
</div>"
`;

exports[`Avatar should render examples: Avatar 2`] = `
"<div>
  <div>
    <div class=\\"c-avatar c-avatar--medium\\">
      <!-- react-text: 2 -->
      <!-- /react-text -->
      <!-- react-text: 3 -->
      <!-- /react-text -->
      <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\">
        <use xlink:href=\\"test-file-stub\\"></use>
      </svg>
    </div>
  </div>
</div>"
`;

exports[`Avatar should render examples: Avatar 3`] = `
"<div>
  <div>
    <div class=\\"c-avatar c-avatar--medium\\">
      <!-- react-text: 2 -->
      <!-- /react-text -->
      <!-- react-text: 3 -->
      <!-- /react-text -->
      <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\">
        <use xlink:href=\\"test-file-stub\\"></use>
      </svg>
    </div>
  </div>
</div>"
`;

exports[`Avatar should render examples: Avatar 4`] = `
"<div>
  <div>
    <div class=\\"c-avatar c-avatar--medium\\">
      <!-- react-text: 2 -->
      <!-- /react-text -->
      <!-- react-text: 3 -->
      <!-- /react-text -->
      <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\">
        <use xlink:href=\\"test-file-stub\\"></use>
      </svg>
    </div>
  </div>
</div>"
`;

exports[`Badge should render examples: Badge 1`] = `
"<div>
  <div>
    <div>
      <p><span class=\\"c-badge-root\\"><button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--normal c-actionbtn--compact\\" title=\\"Normal\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Normal</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button><span class=\\"c-badge c-badge--normal\\">2</span></span>
      </p>
      <p><span class=\\"c-badge-root\\"><button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--new c-actionbtn--compact\\" title=\\"New\\"><span><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">New</span></span>
        </button><span class=\\"c-badge c-badge--new\\">2</span></span>
      </p>
      <p><span class=\\"c-badge-root\\"><button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--error c-actionbtn--compact\\" title=\\"Error\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Error</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button><span class=\\"c-badge c-badge--error\\">2</span></span>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 1`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 2`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 3`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 4`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 5`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 6`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 7`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 8`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 9`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 10`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Button should render examples: Button 11`] = `
"<div>
  <div>
    <div>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--regular\\"><span><span>regular</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger\\"><span><span>danger</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--highlight\\"><span><span>highlight</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--secondary\\"><span><span>secondary</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--danger-outline\\"><span><span>danger-outline</span></span>
        </button>
      </p>
      <p>
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"false\\" disabled=\\"\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
        <button aria-busy=\\"true\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn c-btn--alpha\\"><span><span>alpha</span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`ButtonAction should render examples: ButtonAction 1`] = `
"<div>
  <div>
    <div>
      <p>
        <button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--normal\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Normal</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
        <button disabled=\\"\\" type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--normal\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Normal</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
      </p>
      <p>
        <button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--new\\"><span><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">New</span></span>
        </button>
        <button disabled=\\"\\" type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--new\\"><span><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">New</span></span>
        </button>
      </p>
      <p>
        <button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--error\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Error</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
        <button disabled=\\"\\" type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--error\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Error</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`ButtonAction should render examples: ButtonAction 2`] = `
"<div>
  <div>
    <div>
      <p>
        <button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--normal\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Normal</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
        <button disabled=\\"\\" type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--normal\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Normal</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
      </p>
      <p>
        <button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--new\\"><span><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">New</span></span>
        </button>
        <button disabled=\\"\\" type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--new\\"><span><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">New</span></span>
        </button>
      </p>
      <p>
        <button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--error\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Error</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
        <button disabled=\\"\\" type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--error\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Error</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`ButtonAction should render examples: ButtonAction 3`] = `
"<div>
  <div>
    <div>
      <p>
        <button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--normal\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Normal</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
        <button disabled=\\"\\" type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--normal\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Normal</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
      </p>
      <p>
        <button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--new\\"><span><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">New</span></span>
        </button>
        <button disabled=\\"\\" type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--new\\"><span><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">New</span></span>
        </button>
      </p>
      <p>
        <button type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--error\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Error</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
        <button disabled=\\"\\" type=\\"button\\" role=\\"button\\" class=\\"c-actionbtn c-actionbtn--error\\"><span><span data-action=\\"label\\" class=\\"c-actionbtn-label\\">Error</span><span data-action=\\"icon\\" class=\\"c-actionbtn-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span></span>
        </button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Checkbox should render examples: Checkbox 1`] = `
"<div>
  <div>
    <form>
      <div>
        <label class=\\"c-input-checkbox\\" aria-checked=\\"\\">
          <input type=\\"checkbox\\" value=\\"\\" name=\\"\\"><span>This is a checkbox</span></label>
      </div>
    </form>
  </div>
</div>"
`;

exports[`Checkbox should render examples: Checkbox 2`] = `
"<div>
  <div>
    <form>
      <div>
        <label class=\\"c-input-checkbox\\" aria-checked=\\"\\">
          <input type=\\"checkbox\\" value=\\"\\" name=\\"\\"><span>This is a checkbox</span></label>
      </div>
    </form>
  </div>
</div>"
`;

exports[`Checkbox should render examples: Checkbox 3`] = `
"<div>
  <div>
    <form>
      <div>
        <label class=\\"c-input-checkbox\\" aria-checked=\\"\\">
          <input type=\\"checkbox\\" value=\\"\\" name=\\"\\"><span>This is a checkbox</span></label>
      </div>
    </form>
  </div>
</div>"
`;

exports[`Field should render examples: Field 1`] = `
"<div>
  <div>
    <form>
      <div class=\\"o-field\\">
        <label for=\\"\\" class=\\"c-label\\">I'm a label</label>
        <textarea placeholder=\\"I'm a textarea\\" class=\\"c-textarea\\" id=\\"idField\\"></textarea>
      </div>
    </form>
  </div>
</div>"
`;

exports[`Field should render examples: Field 2`] = `
"<div>
  <div>
    <form>
      <div class=\\"o-field\\">
        <label for=\\"\\" class=\\"c-label\\">I'm a label</label>
        <textarea placeholder=\\"I'm a textarea\\" class=\\"c-textarea\\" id=\\"idField\\"></textarea>
      </div>
    </form>
  </div>
</div>"
`;

exports[`Hero should render examples: Hero 1`] = `
"<div>
  <div>
    <div class=\\"Hero\\">
      <h2 class=\\" Hero-title\\">Connect your bank accounts</h2>
      <div class=\\" Hero-sections\\">
        <div class=\\" Hero-section\\">
          <svg class=\\"icon\\" width=\\"80\\" height=\\"80\\" style=\\"color: rgb(245, 45, 45);\\">
            <use xlink:href=\\"test-file-stub\\"></use>
          </svg>
          <h3 class=\\" Hero-subtitle\\">Control your budget</h3>
          <p class=\\" \\">Summary of all your accounts at a glance</p>
        </div>
        <div class=\\" Hero-section\\">
          <svg class=\\"icon\\" width=\\"80\\" height=\\"80\\" style=\\"color: rgb(167, 91, 203);\\">
            <use xlink:href=\\"test-file-stub\\"></use>
          </svg>
          <h3 class=\\" Hero-subtitle\\">Save Time</h3>
          <p class=\\" \\">Your invoices at your fingertips directly from your statements</p>
        </div>
        <div class=\\" Hero-section\\">
          <svg class=\\"icon\\" width=\\"80\\" height=\\"80\\" style=\\"color: rgb(45, 138, 242);\\">
            <use xlink:href=\\"test-file-stub\\"></use>
          </svg>
          <h3 class=\\" Hero-subtitle\\">Cozy is working for you</h3>
          <p class=\\" \\">Automatic follow-up of your medical expenses</p>
        </div>
      </div>
      <p class=\\" Hero-cta\\">
        <button aria-busy=\\"false\\" type=\\"submit\\" role=\\"button\\" class=\\"c-btn\\"><span><!-- react-text: 22 -->Connect your bank accounts<!-- /react-text --></span></button>
      </p>
    </div>
  </div>
</div>"
`;

exports[`Icon should render examples: Icon 1`] = `
"<div>
  <div>
    <div style=\\"font-size: 2rem; display: grid;\\">
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">album</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">album-add</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">album-remove</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">back</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">bottom</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">check</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">check-circleless</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">clock</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">cozy</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">cross</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">delete</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">destroy</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">device-laptop</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">dots</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">download</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">file</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">file-none</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">folder</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">forward</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">gear</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">hourglass</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">image</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">moveto</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">openwith</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">paperplane</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">people</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">plus</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">rename</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">restore</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">share</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">small-arrow</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">top</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">trash</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">upload</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">warn</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">warning</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Icon should render examples: Icon 2`] = `
"<div>
  <div>
    <div style=\\"font-size: 2rem; display: grid;\\">
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">album</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">album-add</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">album-remove</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">back</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">bottom</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">check</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">check-circleless</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">clock</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">cozy</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">cross</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">delete</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">destroy</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">device-laptop</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">dots</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">download</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">file</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">file-none</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">folder</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">forward</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">gear</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">hourglass</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">image</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">moveto</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">openwith</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">paperplane</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">people</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">plus</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">rename</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">restore</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">share</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">small-arrow</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #08b442;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">top</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #B449E7;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">trash</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #F52D2D;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">upload</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #FF962F;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">warn</p>
      </div>
      <div style=\\"text-align: center;\\">
        <svg class=\\"icon\\" width=\\"16\\" height=\\"16\\" style=\\"fill: #297EF2;\\">
          <use xlink:href=\\"test-file-stub\\"></use>
        </svg>
        <p style=\\"font-size: 1rem;\\">warning</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Label should render examples: Label 1`] = `
"<div>
  <div>
    <form>
      <div>
        <label for=\\"idInput\\" class=\\"c-label\\">This is a label</label>
        <input type=\\"text\\" id=\\"idInput\\" class=\\"c-input-text\\" placeholder=\\"Recherche\\">
      </div>
    </form>
  </div>
</div>"
`;

exports[`Label should render examples: Label 2`] = `
"<div>
  <div>
    <form>
      <div>
        <label for=\\"idInput\\" class=\\"c-label\\">This is a label</label>
        <input type=\\"text\\" id=\\"idInput\\" class=\\"c-input-text\\" placeholder=\\"Recherche\\">
      </div>
    </form>
  </div>
</div>"
`;

exports[`ListItemText should render examples: ListItemText 1`] = `
"<div>
  <div>
    <div class=\\"c-list-text\\">
      <div class=\\"g-text u-ellipsis\\">I'm a list item text</div>
    </div>
  </div>
</div>"
`;

exports[`ListItemText should render examples: ListItemText 2`] = `
"<div>
  <div>
    <div class=\\"c-list-text\\">
      <div class=\\"g-text u-ellipsis\\">I'm a list item text</div>
    </div>
  </div>
</div>"
`;

exports[`ListItemText should render examples: ListItemText 3`] = `
"<div>
  <div>
    <div class=\\"c-list-text\\">
      <div class=\\"g-text u-ellipsis\\">I'm a list item text</div>
    </div>
  </div>
</div>"
`;

exports[`Menu should render examples: Menu 1`] = `
"<div>
  <div>
    <div class=\\"c-menu c-menu--left\\">
      <button role=\\"button\\" class=\\"c-btn c-menu__btn\\">Click me !</button>
    </div>
  </div>
</div>"
`;

exports[`Menu should render examples: Menu 2`] = `
"<div>
  <div>
    <div class=\\"c-menu c-menu--left\\">
      <button role=\\"button\\" class=\\"c-btn c-menu__btn\\">Click me !</button>
    </div>
  </div>
</div>"
`;

exports[`Menu should render examples: Menu 3`] = `
"<div>
  <div>
    <div class=\\"c-menu c-menu--left\\">
      <button role=\\"button\\" class=\\"c-btn c-menu__btn\\">Click me !</button>
    </div>
  </div>
</div>"
`;

exports[`Radio should render examples: Radio 1`] = `
"<div>
  <div>
    <form>
      <div>
        <label class=\\"c-input-radio\\">
          <input type=\\"radio\\" value=\\"radioValue1\\" name=\\"radioForm\\"><span>This is a radio button</span></label>
        <label class=\\"c-input-radio\\">
          <input type=\\"radio\\" value=\\"radioValue2\\" name=\\"radioForm\\"><span>This is also a radio button</span></label>
      </div>
    </form>
  </div>
</div>"
`;

exports[`Radio should render examples: Radio 2`] = `
"<div>
  <div>
    <form>
      <div>
        <label class=\\"c-input-radio\\">
          <input type=\\"radio\\" value=\\"radioValue1\\" name=\\"radioForm\\"><span>This is a radio button</span></label>
        <label class=\\"c-input-radio\\">
          <input type=\\"radio\\" value=\\"radioValue2\\" name=\\"radioForm\\"><span>This is also a radio button</span></label>
      </div>
    </form>
  </div>
</div>"
`;

exports[`SelectBox should render examples: SelectBox 1`] = `
"<div>
  <div>
    <div class=\\"react-select__container css-13t81xe\\"><span aria-atomic=\\"true\\" aria-live=\\"polite\\" role=\\"status\\" class=\\"css-17l7ekz\\">3 results available.</span>
      <div class=\\"react-select__control css-a83eig\\">
        <div class=\\"react-select__value-container css-12sevwg\\">
          <div class=\\"react-select__placeholder css-16ucli7\\">Select...</div>
          <div class=\\"css-16n6ap7\\">
            <div class=\\"react-select__input\\" style=\\"display: inline-block;\\">
              <input type=\\"text\\" autocapitalize=\\"none\\" autocomplete=\\"off\\" autocorrect=\\"off\\" id=\\"react-select-2--input\\" spellcheck=\\"false\\" tabindex=\\"0\\" value=\\"\\" aria-autocomplete=\\"list\\" aria-busy=\\"false\\" aria-expanded=\\"false\\" aria-haspopup=\\"false\\" role=\\"combobox\\"
                style=\\"box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;\\">
              <div style=\\"position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;\\"></div>
            </div>
          </div>
        </div>
        <div class=\\"react-select__indicators css-1lfa1d8\\"><span role=\\"presentation\\" class=\\"react-select__indicator-separator css-1hq2z0s\\"></span>
          <div role=\\"button\\" class=\\"react-select__indicator react-select__dropdown-indicator css-1k2060c\\">
            <svg height=\\"20\\" width=\\"20\\" viewBox=\\"0 0 20 20\\" focusable=\\"false\\" role=\\"presentation\\" class=\\"react-select__icon react-select__down-icon css-qyb9b\\">
              <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`SelectBox should render examples: SelectBox 2`] = `
"<div>
  <div>
    <div class=\\"react-select__container css-13t81xe\\"><span aria-atomic=\\"true\\" aria-live=\\"polite\\" role=\\"status\\" class=\\"css-17l7ekz\\">3 results available.</span>
      <div class=\\"react-select__control css-a83eig\\">
        <div class=\\"react-select__value-container css-12sevwg\\">
          <div class=\\"react-select__placeholder css-16ucli7\\">Select...</div>
          <div class=\\"css-16n6ap7\\">
            <div class=\\"react-select__input\\" style=\\"display: inline-block;\\">
              <input type=\\"text\\" autocapitalize=\\"none\\" autocomplete=\\"off\\" autocorrect=\\"off\\" id=\\"react-select-3--input\\" spellcheck=\\"false\\" tabindex=\\"0\\" value=\\"\\" aria-autocomplete=\\"list\\" aria-busy=\\"false\\" aria-expanded=\\"false\\" aria-haspopup=\\"false\\" role=\\"combobox\\"
                style=\\"box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;\\">
              <div style=\\"position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;\\"></div>
            </div>
          </div>
        </div>
        <div class=\\"react-select__indicators css-1lfa1d8\\"><span role=\\"presentation\\" class=\\"react-select__indicator-separator css-1hq2z0s\\"></span>
          <div role=\\"button\\" class=\\"react-select__indicator react-select__dropdown-indicator css-1k2060c\\">
            <svg height=\\"20\\" width=\\"20\\" viewBox=\\"0 0 20 20\\" focusable=\\"false\\" role=\\"presentation\\" class=\\"react-select__icon react-select__down-icon css-qyb9b\\">
              <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`SelectBox should render examples: SelectBox 3`] = `
"<div>
  <div>
    <div class=\\"react-select__container css-13t81xe\\"><span aria-atomic=\\"true\\" aria-live=\\"polite\\" role=\\"status\\" class=\\"css-17l7ekz\\">3 results available.</span>
      <div class=\\"react-select__control css-a83eig\\">
        <div class=\\"react-select__value-container css-12sevwg\\">
          <div class=\\"react-select__placeholder css-16ucli7\\">Select...</div>
          <div class=\\"css-16n6ap7\\">
            <div class=\\"react-select__input\\" style=\\"display: inline-block;\\">
              <input type=\\"text\\" autocapitalize=\\"none\\" autocomplete=\\"off\\" autocorrect=\\"off\\" id=\\"react-select-4--input\\" spellcheck=\\"false\\" tabindex=\\"0\\" value=\\"\\" aria-autocomplete=\\"list\\" aria-busy=\\"false\\" aria-expanded=\\"false\\" aria-haspopup=\\"false\\" role=\\"combobox\\"
                style=\\"box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;\\">
              <div style=\\"position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;\\"></div>
            </div>
          </div>
        </div>
        <div class=\\"react-select__indicators css-1lfa1d8\\"><span role=\\"presentation\\" class=\\"react-select__indicator-separator css-1hq2z0s\\"></span>
          <div role=\\"button\\" class=\\"react-select__indicator react-select__dropdown-indicator css-1k2060c\\">
            <svg height=\\"20\\" width=\\"20\\" viewBox=\\"0 0 20 20\\" focusable=\\"false\\" role=\\"presentation\\" class=\\"react-select__icon react-select__down-icon css-qyb9b\\">
              <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Sidebar should render examples: Sidebar 1`] = `
"<div>
  <div>
    <aside class=\\"o-sidebar\\">
      <nav>
        <ul class=\\"c-nav\\">
          <li class=\\"c-nav-item\\">
            <a class=\\"c-nav-link\\"><span class=\\"c-nav-item__icon c-nav-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span><span class=\\"c-nav-item__text\\">Warn</span></a>
          </li>
          <li class=\\"c-nav-item\\">
            <a class=\\"c-nav-link\\"><span class=\\"c-nav-item__icon c-nav-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span><span class=\\"c-nav-item__text\\">Check</span></a>
          </li>
          <li class=\\"c-nav-item\\">
            <a class=\\"c-nav-link\\"><span class=\\"c-nav-item__icon c-nav-icon\\"><svg class=\\"icon\\" width=\\"16\\" height=\\"16\\"><use xlink:href=\\"test-file-stub\\"></use></svg></span><span class=\\"c-nav-item__text\\">Download</span></a>
          </li>
        </ul>
      </nav>
    </aside>
  </div>
</div>"
`;

exports[`Spinner should render examples: Spinner 1`] = `
"<div>
  <div>
    <div class=\\"c-spinner c-spinner--blue c-spinner--medium\\"></div>
  </div>
</div>"
`;

exports[`Spinner should render examples: Spinner 2`] = `
"<div>
  <div>
    <div class=\\"c-spinner c-spinner--blue c-spinner--medium\\"></div>
  </div>
</div>"
`;

exports[`Spinner should render examples: Spinner 3`] = `
"<div>
  <div>
    <div class=\\"c-spinner c-spinner--blue c-spinner--medium\\"></div>
  </div>
</div>"
`;

exports[`Spinner should render examples: Spinner 4`] = `
"<div>
  <div>
    <div class=\\"c-spinner c-spinner--blue c-spinner--medium\\"></div>
  </div>
</div>"
`;

exports[`Text should render examples: Text 1`] = `
"<div>
  <div>
    <div class=\\"g-text\\">This a standard text</div>
  </div>
</div>"
`;

exports[`Text should render examples: Text 2`] = `
"<div>
  <div>
    <div class=\\"g-text\\">This a standard text</div>
  </div>
</div>"
`;

exports[`Textarea should render examples: Textarea 1`] = `
"<div>
  <div>
    <textarea placeholder=\\"Once upon a time…\\" class=\\"c-textarea\\"></textarea>
  </div>
</div>"
`;

exports[`Textarea should render examples: Textarea 2`] = `
"<div>
  <div>
    <textarea placeholder=\\"Once upon a time…\\" class=\\"c-textarea\\"></textarea>
  </div>
</div>"
`;

exports[`Textarea should render examples: Textarea 3`] = `
"<div>
  <div>
    <textarea placeholder=\\"Once upon a time…\\" class=\\"c-textarea\\"></textarea>
  </div>
</div>"
`;

exports[`Textarea should render examples: Textarea 4`] = `
"<div>
  <div>
    <textarea placeholder=\\"Once upon a time…\\" class=\\"c-textarea\\"></textarea>
  </div>
</div>"
`;

exports[`Textarea should render examples: Textarea 5`] = `
"<div>
  <div>
    <textarea placeholder=\\"Once upon a time…\\" class=\\"c-textarea\\"></textarea>
  </div>
</div>"
`;

exports[`Toggle should render examples: Toggle 1`] = `
"<div>
  <div><span class=\\"toggle\\"><input type=\\"checkbox\\" id=\\"simple-toggle\\" class=\\"checkbox\\" value=\\"on\\"><label for=\\"simple-toggle\\" class=\\"label\\"></label></span></div>
</div>"
`;

exports[`Toggle should render examples: Toggle 2`] = `
"<div>
  <div><span class=\\"toggle\\"><input type=\\"checkbox\\" id=\\"simple-toggle\\" class=\\"checkbox\\" value=\\"on\\"><label for=\\"simple-toggle\\" class=\\"label\\"></label></span></div>
</div>"
`;

exports[`Toggle should render examples: Toggle 3`] = `
"<div>
  <div><span class=\\"toggle\\"><input type=\\"checkbox\\" id=\\"simple-toggle\\" class=\\"checkbox\\" value=\\"on\\"><label for=\\"simple-toggle\\" class=\\"label\\"></label></span></div>
</div>"
`;

exports[`Toggle should render examples: Toggle 4`] = `
"<div>
  <div><span class=\\"toggle\\"><input type=\\"checkbox\\" id=\\"simple-toggle\\" class=\\"checkbox\\" value=\\"on\\"><label for=\\"simple-toggle\\" class=\\"label\\"></label></span></div>
</div>"
`;

exports[`Toggle should render examples: Toggle 5`] = `
"<div>
  <div><span class=\\"toggle\\"><input type=\\"checkbox\\" id=\\"simple-toggle\\" class=\\"checkbox\\" value=\\"on\\"><label for=\\"simple-toggle\\" class=\\"label\\"></label></span></div>
</div>"
`;
